--- a/index.html
+++ b/index.html
@@ -1,23 +1,67 @@
-
 <!DOCTYPE html>
 <html language="en">
     <head>
         <meta charset="UTF-8">
-        <title> My Portfolio</title>
+        <title>My Resume</title>
     </head>
+
     <body>
-        <h1> Aadarsh Portfolio</h1>
-        <h2> I am a Web Developer</h2>
-        <hr />
-        <h3><a href="./assets/images/Movie_Ranking_Project.png">Movie Ranking Project</a></h3>
-        <img src="./assets/images/Movie_Ranking_Project.png" height="200" alt="Movie Ranking Project"/>
-        <h3><a href="./assets/images/Birthday Invite Project.png">Birthday Invitation Project</a></h3>
-        <img src="./assets/images/Birthday Invite Project.png" height="200" alt="Picture of a Birthday Cake"/>
+        <h1>Aadarsh Pandit</h1>
+        <img src="./Image.jpg" height="120"/>
+        <h2>Career Objective</h2>
+            <p>My name is Aadarsh Pandit I have completed my Bachelor of Engineering from Vivekanand Education Society's Institute of Technology.
+               I have good communication skills and soft skills and an enthusiastic web developer.
+            </p>
+        <h2>Education</h2>
+            <ul>
+                <li>Vivekanand Education Society's Institute of Tehnology,Chembur, Mumbai-80 (2020-2024).
+                    <p><b>CGPI-8.61</b></p>
+                </li>
+                <li>Mulund Vidya Mandir Jr. College Mulund-West, Mumbai-80 (2018-2020)
+                     <p><b>HSC-78.62%</b></p> 
+                </li>
+                <li>Billabong High International School,Thane (2012-2018)
+                    <p><b>ICSE-85.33%</b></p>
+                </li>
+            </ul>
+        <h2>Work Experience</h2>
+            <ul>
+                <li>Data Science Intern at PERSONIFWY (20th Nov 2021-20th Jan 2022)</li>
+                <p>Worked on Machine Learning Project to <b>Detect Parkinson Disease using XG Boost Classfier.</b>
+                   The Parkinson's Disease is a gentic disease which usually occurs in elderly people above the age of 65.
+                   An accurate system for early prediction was created to take necessary precautions.
+                   The overall accuracy for prediction was found to be <b>94%.</b><br />
+                </p>
+            </ul>
+        <h2>Personal Projects</h2>
+            <ol>
+                <li><a href="./Multiple Disease Prediction.html">Multiple Disease Prediction Using Machine Learning</a>
+                </li>
+                <li><a href="./Fake News Prediction using Machine Learning.html">Fake News Prediction using Machine Learning</a>
+                </li>
+            </ol>
+        <h2>Achievements</h2>
+            <ul>
+                <li>Completed<b>Hands on Cyber Security Essentials</b> from 20th-26th Feb 2023.</li>
+                <li>Completed a course on <b>Developing Soft Skills and Personality</b> from NPTEL and scored <b>91%</b></li>
+            </ul>
+        <h2>Skills</h2>
+            <ul>
+                <li>Java</li>
+                <li>Python</li>
+                <li>HTML</li>
+                <li>Scilab</li>
+            </ul>
+        <h2>Hobbies</h2>
+            <ul>
+                <li>Table Tennis</li>
+                <li>Carrom</li>
+            </ul>
 
-        <a href="./public/about.html">About Me</a>
-
-        <a href="./public/contact.html">Contact Me</a>
+        <a href="./contact.html" target="_blank">Contact Me</a><br />
+        <a href="./about.html" target="_blank">About Me</a>
+        <footer>
+            <p>© Aadarsh Pandit. All rights reserved.</p>
+        </footer>
     </body>
 </html>
-
-
